package(default_visibility = ["//visibility:public"])

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag(name = "debug", build_setting_default = 0)
config_setting(name = "debug?", flag_values = {":debug": "True"})

bool_flag(name = "stacktrace", build_setting_default = 0)
config_setting(name = "stacktrace?", flag_values = {":stacktrace": "True"})

bool_flag(name = "trace", build_setting_default = 0)
config_setting(name = "trace?", flag_values = {":trace": "True"})

config_setting(
    name = "linux?",
    constraint_values = ["@platforms//os:linux"],
    values = {
        "compilation_mode": "dbg",
    },
)

## FIXME: should be based on compiler, not os, e.g. clang_debug v. gcc_debug
##  @local_config_cc//:cc-compiler-darwin_x86_64
config_setting(
    name = "macos?",
    constraint_values = [
        # "@local_config_cc//:cc-compiler-darwin_x86_64"
        "@platforms//os:macos"
    ],
    values = {
        # "@bazel_tools//tools/cpp:toolchain_type": "@local_config_cc//:cc-compiler-darwin_x86_64",
        "compilation_mode": "dbg"
    },
)
