package(default_visibility = ["//visibility:public"])

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag(name = "static", build_setting_default = False )
config_setting(name = "static?", flag_values = {":archive": "True"})

# config_setting(
#     name = "debug",
#     values = {"compilation_mode": "dbg"},
# )
