load("@rules_foreign_cc//foreign_cc:configure.bzl",
     "configure_make")

# exports_files(["libflint.h"])

filegroup(
    name = "all",
    srcs = glob(["**"]),
)

# build cmd:  bazel build @flint//:libflint
configure_make(
    name = "libflint",
    lib_source = ":all",
    deps = ["@gmp//:libgmp", "@mpfr//:libmpfr"],
    out_static_libs = ["libflint.a"],
    out_shared_libs = select({
        "@bazel_tools//src/conditions:darwin": ["libflint.dylib"],
        "@bazel_tools//src/conditions:linux" : ["libflint.so"],
        "//conditions:default"               : ["libflint.so"],
    }),
    env = select({
        "@bazel_tools//src/conditions:darwin": {"AR": ""},
        "//conditions:default": {}
    }),
    args = ["V=1"],
    configure_in_place = True,
    configure_options = [
        # "--disable-maintainer-mode",
        # "--disable-silent-rules",
        # "--disable-dependency-tracking",
    ],
    visibility = ["//visibility:public"],
)

