load("@rules_foreign_cc//foreign_cc:configure.bzl",
     "configure_make")

# exports_files(["libgmp.h"])

filegroup(
    name = "all",
    srcs = glob(["**"]),
)

# build cmd:  bazel build @gmp//:libgmp
configure_make(
    name = "libgmp",
    lib_source = ":all",
    # deps = ["@gmp//:libgmp"],
    out_static_libs = ["libgmp.a"],
    out_shared_libs = select({
        "@bazel_tools//src/conditions:darwin": ["libgmp.dylib"],
        "@bazel_tools//src/conditions:linux" : ["libgmp.so"],
        "//conditions:default"               : ["libgmp.so"],
    }),
    env = select({
        "@bazel_tools//src/conditions:darwin": {"AR": ""},
        "//conditions:default": {}
    }),
    args = ["V=1"],
    configure_in_place = True,
    configure_options = [
        "--disable-maintainer-mode",
        "--disable-silent-rules",
        "--disable-dependency-tracking",
        "--with-pic" # without this we get link errors on shared lib
    ],
    visibility = ["//visibility:public"],
)

