load("@rules_foreign_cc//foreign_cc:configure.bzl",
     "configure_make")

# exports_files(["libgsl.h"])

filegroup(
    name = "all",
    srcs = glob(["**"]),
)

# build cmd:  bazel build @libgsl//:libgsl
configure_make(
    name = "libgsl",
    lib_source = ":all",
    out_static_libs = ["libgsl.a", "libgslcblas.a"],
    out_shared_libs = select({
        "@bazel_tools//src/conditions:darwin": [
            "libgsl.dylib", "libgslcblas.dylib"],
        "@bazel_tools//src/conditions:linux" : ["libgsl.so"],
        "//conditions:default"               : ["libgsl.so"],
    }),
    env = select({
        "@bazel_tools//src/conditions:darwin": {"AR": ""},
        "//conditions:default": {}
    }),
    configure_in_place = True,
    configure_options = [
        "--disable-dependency-tracking",
    ] + select({
        "@bazel_tools//src/conditions:linux" : ["--with-pic"],
        "//conditions:default": []
    }),
    visibility = ["//visibility:public"],
)
