load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

# needed by s7 nrepl

# exports_files(["libdeflate.h"])

filegroup(
    name = "all",
    srcs = glob(["**"]),
)

configure_make(
    name = "libncurses",
    lib_source = ":all",
    out_shared_libs = ["libncurses.dylib"],
    out_static_libs = ["libncurses.a"],
    configure_in_place = True,
    configure_options = [
        # "--with-libtool",
        "--with-shared"
    ],
    env = select({
        # ":macsdk_13.0": ENV_MACSDK_13_0,
        # ":macsdk_13.1": ENV_MACSDK_13_1,
        # ":macsdk_13.3": ENV_MACSDK_13_3,
        "//conditions:default": {"AR": ""}
    }),
    visibility = ["//visibility:public"],
)
