load("@rules_foreign_cc//foreign_cc:defs.bzl", "make")

# NB: cmake would be more portable (think windows), but it does not
# support shared lib output.

filegroup(
    name = "all",
    srcs = glob(["**"]),
)

# build cmd:  bazel build @utf8proc//:libutf8proc
make(
    name = "libutf8proc",
    lib_source = ":all",
    env = select({
        "@bazel_tools//src/conditions:darwin": {"AR": "ar"},
        "//conditions:default"               : {}
    }),
    args = ["prefix=$$INSTALLDIR"],
    out_static_libs = ["libutf8proc.a"],
    out_shared_libs = select({
        "@bazel_tools//src/conditions:darwin": ["libutf8proc.dylib"],
        "@bazel_tools//src/conditions:linux" : ["libutf8proc.so"],
        "//conditions:default"               : ["libutf8proc.so"],
    }),
    defines = ["BUILD_SHARED_LIBS"],
    visibility = ["//visibility:public"],
)
