package(default_visibility = ["//visibility:public"])

# exports_files(["libarb.scm"])

load("//lib:BUILD.bzl",
     "CLIB_COPTS", "CLIB_LINKOPTS", "CLIB_DEFINES")

################################################################
cc_library(
    name  = "arb_s7_archive", # emits libarb_s7_archive.a
    linkstatic = True,
    alwayslink = True, # ensure init fn sym available for dlsym
    srcs  = [":libarb_s7.c", "//src:s7.h"],
    # hdrs  = [":libarb_s7.h"],
    deps  = ["@arb//:libarb", "@mpc//:libmpc"],
    copts = CLIB_COPTS + [
        "-Iexternal/libs7/arb/libarb/include",
        "-Iexternal/libs7/mpc/libmpc/include",
    ],
    linkopts = CLIB_LINKOPTS,
    local_defines = CLIB_DEFINES,
)

cc_binary(
    name  = "arb_s7",  # create libarb_s7.{dylib,so}
    linkshared = True,
    srcs  = [":libarb_s7.c", "//src:s7.h"],
    deps  = ["@arb//:libarb", "@mpc//:libmpc"],
    copts = CLIB_COPTS + [
        "-Iexternal/libs7/arb/libarb/include",
        "-Iexternal/libs7/mpc/libmpc/include",
    ],
    linkopts = CLIB_LINKOPTS,
    local_defines = CLIB_DEFINES,
)
