load("@bazel_skylib//rules:run_binary.bzl", "run_binary")

package(default_visibility = ["//visibility:public"])

exports_files(["libc_clibgen.scm"])

load("//lib:BUILD.bzl",
     "clibgen_runner",
     "CLIB_COPTS", "CLIB_LINKOPTS", "CLIB_DEFINES")

################################################################
cc_library(
    name  = "c_s7_archive", # emits libc_s7_archive.a
    linkstatic = True,
    alwayslink = True, # ensure init fn sym available for dlsym
    srcs  = [":libc_s7.c", "//src:s7.h"],
    copts = CLIB_COPTS,
    linkopts = CLIB_LINKOPTS  + select({
        "//config/host:linux?": ["-lrt"],
        "//conditions:default": []
    }),
    defines = CLIB_DEFINES  + select({
        "//config/host:linux?": ["_POSIX_C_SOURCE=200809",
                                 "_DEFAULT_SOURCE" # strcasecmp in string.h
                                 ],
        "//conditions:default": []
    })
)

cc_binary(
    name  = "c_s7",  # create libc_s7.{dylib,so}
    linkshared = True,
    srcs  = [":libc_s7.c", "//src:s7.h"],
    copts = CLIB_COPTS,
    linkopts = CLIB_LINKOPTS  + select({
        "//config/host:linux?": ["-lrt"],
        "//conditions:default": []
    }),
    defines = CLIB_DEFINES  + select({
        "//config/host:linux?": ["_POSIX_C_SOURCE=200809", "_DEFAULT_SOURCE"],
        "//conditions:default": []
    })
)

clibgen_runner(
    name = "libc_s7_runbin",
    tool = "//lib:clibgen",
    args = ["--script", "lib/libc/libc_clibgen.scm"],
    srcs = [":libc_clibgen.scm", "//lib:clibgen.scm"],
    outs = [":libc_s7.c"]
)
