package(default_visibility = ["//visibility:public"])

exports_files(["libc_clibgen.scm"])

load("//:BUILD.bzl",
     "BASE_SRCS", "BASE_DEPS", "BASE_INCLUDE_PATHS",
     "BASE_COPTS", "BASE_DEFINES", "BASE_LINKOPTS")

load("//lib:BUILD.bzl", "clibgen_runner",
     "CLIB_SRCS", "CLIB_INCLUDE_PATHS", "CLIB_COPTS", "CLIB_LINKOPTS")

SRCS          = BASE_SRCS + CLIB_SRCS
INCLUDE_PATHS = BASE_INCLUDE_PATHS + CLIB_INCLUDE_PATHS
COPTS         = BASE_COPTS + CLIB_COPTS + INCLUDE_PATHS
DEPS          = BASE_DEPS
DEFINES       = BASE_DEFINES
LINKOPTS      = BASE_LINKOPTS + CLIB_LINKOPTS

################################################################
cc_library(
    name  = "c_s7_archive", # emits libc_s7_archive.a
    linkstatic = True,
    alwayslink = True, # ensure init fn sym available for dlsym
    srcs  = SRCS + [":libc_s7.c"], # "//src:s7.h"],
    hdrs  = ["//src:s7.h", "//src:libs7.h"],
    deps  = DEPS,
    copts = COPTS + ["-Wno-unused-parameter"],
    linkopts = LINKOPTS  + select({
        "//config/host/build:linux?": ["-lrt"],
        "//conditions:default": []
    }),
    local_defines = DEFINES  + select({
        "//config/host/build:linux?": ["_POSIX_C_SOURCE=200809",
                                 "_DEFAULT_SOURCE" # strcasecmp in string.h
                                 ],
        "//conditions:default": []
    })
)

cc_binary(
    name  = "c_s7",  # create libc_s7.{dylib,so}
    linkshared = True,
    srcs  = SRCS + [":libc_s7.c"], # "//src:s7.h"],
    deps  = DEPS,
    copts = COPTS + ["-Wno-unused-parameter"],
    linkopts = LINKOPTS  + select({
        "//config/host/build:linux?": ["-lrt"],
        "//conditions:default": []
    }),
    local_defines = DEFINES  + select({
        "//config/host/build:linux?": ["_POSIX_C_SOURCE=200809", "_DEFAULT_SOURCE"],
        "//conditions:default": []
    })
)

clibgen_runner(
    name = "libc_s7_runbin",
    tool = "//lib:clibgen",
    args = ["--script", "lib/libc/libc_clibgen.scm"],
    srcs = [":libc_clibgen.scm", "//lib:clibgen.scm"],
    outs = [":libc_s7.c"]
)
