package(default_visibility = ["//visibility:public"])

exports_files(["libcwalk_clibgen.scm"])

load("//:BUILD.bzl", "SRCS", "DEPS",
     "COPTS", "INCLUDE_PATHS", "DEFINES", "LINKOPTS")

load("//lib:BUILD.bzl", "clibgen_runner", "CLIB_COPTS")

################################################################
cc_library(
    name  = "cwalk_s7_archive", # emits libcwalk_s7_archive.a
    linkstatic = True,
    alwayslink = True, # ensure init fn sym available for dlsym
    srcs  = SRCS + [":libcwalk_s7.c", "//src:s7.h"],
    deps  = DEPS + ["//vendored/cwalk"],
    copts = COPTS + INCLUDE_PATHS + CLIB_COPTS + [
        "-Ivendored/cwalk",
        "-Iexternal/libs7/vendored/cwalk",
    ],
    linkopts      = LINKOPTS,
    local_defines = DEFINES
)

cc_binary(
    name  = "cwalk_s7",  # create libcwalk_s7.{dylib,so}
    linkshared = True,
    srcs  = SRCS + [":libcwalk_s7.c", "//src:s7.h"],
    deps  = DEPS + ["//vendored/cwalk"],
    copts = COPTS + INCLUDE_PATHS + CLIB_COPTS + [
        "-Ivendored/cwalk",
        "-Iexternal/libs7/vendored/cwalk",
    ],
    linkopts      = LINKOPTS,
    local_defines = DEFINES
)

clibgen_runner(
    name = "libcwalk_s7_runbin",
    tool = "//lib:clibgen",
    args = ["--script", "lib/libcwalk/libcwalk_clibgen.scm"],
    srcs = [":libcwalk_clibgen.scm", "//lib:clibgen.scm"],
    outs = [":libcwalk_s7.c"]
)
